--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,17 @@
   border-radius: 4px;
   padding: 4px 11px;
 }
+
+.row-dragging {
+  background: #fafafa;
+  border: 1px solid #ccc;
+}
+
+.row-dragging td {
+  padding: 16px;
+  visibility: hidden;
+}
+
+.row-dragging .drag-visible {
+  visibility: visible;
+}
