--- a/src/components/stint/compact-stints.css
+++ b/src/components/stint/compact-stints.css
@@ -1,11 +1,11 @@
 .stint-plan {
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
   width: 100%;
   padding: 0px;
   border-bottom: solid 1pt;
 }
 .driver-source {
-  background-color: blueviolet;
+  /* background-color: blueviolet; */
   border: solid 1px;
   width: 100%;
 }
