Settings Car and Track Fixes #76 Update antd 4.8.2

--- a/src/App.css
+++ b/src/App.css
@@ -98,3 +98,8 @@
 .istint-select-dropdown .ant-btn-group-rtl.ant-dropdown-button {
   margin: 0 0 8px 8px;
 }
+
+/* should produce left aligned forms */
+.istint-form .ant-form-item-control {
+  flex-direction: inherit;
+}
