build(deps): antd 5.1.1 including several adjustments

--- a/src/App.css
+++ b/src/App.css
@@ -63,14 +63,14 @@
 }
 
 .editable-cell-value-wrap {
-  padding: 5px 12px;
+  padding: 5px 12px !important;
   cursor: pointer;
 }
 
 .editable-row:hover .editable-cell-value-wrap {
   border: 1px solid #d9d9d9;
   border-radius: 4px;
-  padding: 4px 11px;
+  padding: 4px 11px !important;
 }
 
 .row-dragging {
